--- a/projectX/appsettings.json
+++ b/projectX/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ALEX-PC\\SQLEXPRESS;Initial Catalog=projectX2;Integrated Security=True;Pooling=False;Encrypt=False;Trust Server Certificate=False"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=DESKTOP-0B5MKFJ;Initial Catalog=projectX;Integrated Security=True;Pooling=False;Encrypt=False;Trust Server Certificate=False"
+    }
 }
